--- a/gemini-clone/package.json
+++ b/gemini-clone/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^0.10.0",
+    "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
